ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: sorting-algorithm-visualizer
 annotations:
   kubernetes.io/ingress.global-static-ip-name: sorting-algorithm-visualizer-ip
   networking.gke.io/managed-certificates: sorting-algorithm-visualizer-certificate
 labels:
   app: streamlit
spec:
 backend:
   serviceName: sorting-algorithm-visualizer-backend
   servicePort: 8501
---
apiVersion: v1
kind: Service
metadata:
 name: sorting-algorithm-visualizer-backend
 labels:
   app: streamlit
spec:
 type: NodePort
 selector:
   app: streamlit
   tier: web
 ports:
 - port: 8501
   targetPort: 8501
